Issue with Safari not showing content

--- a/styles.css
+++ b/styles.css
@@ -248,6 +248,7 @@ a:hover,
 	display: none;
 	max-height: 100%;
 	overflow: auto;
+	height: 100%;
 }
 .nav-content.active {
 	display: block;
